prevent content shift when hiding/showing feeds holder

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -7,7 +7,7 @@
   margin-left: -5px;
   overflow: visible;
 
-  #feeds-holder[style*="none"] ~ & {
+  #feeds-holder_splitter[style*="none"] + & {
     margin-left: 0;
   }
 
